# devop_app_by_Docker

prod/mysite/:  requirements.txt  .gitignore  Dockerfile  Pipfile   docker-compose.yml  gunicorn.conf.py  pyproject.toml
prod/mysite/mysite/: settings.py
